Encrypt and Decrypt Credential Password
