# src/main/java/org/backwarden/api/logic/services/UserService.java
@@ -1,38 +1,75 @@
 package org.backwarden.api.logic.services;
 
+import io.smallrye.jwt.build.Jwt;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
-import org.backwarden.api.adapters.database.model.UserEntity;
+import org.backwarden.api.logic.JwtKeyGenerator;
 import org.backwarden.api.logic.exceptions.DomainValidationException;
+import org.backwarden.api.logic.exceptions.UserDoesNotExistException;
 import org.backwarden.api.logic.model.User;
 import org.backwarden.api.logic.ports.input.UserUseCase;
 import org.backwarden.api.logic.ports.output.persistence.UserRepository;
 
-import java.util.Objects;
-import java.util.regex.Pattern;
+import java.security.NoSuchAlgorithmException;
+import java.security.SecureRandom;
+import java.security.spec.InvalidKeySpecException;
+import java.time.Duration;
+import java.util.Base64;
+import java.util.Set;
+import java.util.UUID;
 
 import io.quarkus.elytron.security.common.BcryptUtil;
 
+import javax.crypto.SecretKey;
+import javax.crypto.SecretKeyFactory;
+import javax.crypto.spec.PBEKeySpec;
+import javax.crypto.spec.SecretKeySpec;
+
 @ApplicationScoped
 public class UserService implements UserUseCase {
-    private static final String EMAIL_REGEX = "^((?!\\.)[\\w-_.]*[^.])(@\\w+)(\\.\\w+(\\.\\w+)?[^.\\W])$";
-    private static final Pattern PATTERN = Pattern.compile(EMAIL_REGEX);
-    private static final String PASSWORD_REGEX = "^(?=.*\\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[^\\w\\d\\s:])([^\\s]){12,30}$";
-    private static final Pattern PASSWORD_PATTERN = Pattern.compile(PASSWORD_REGEX);
+
 
     @Inject
     UserRepository userRepository;
 
+    @Inject
+    SessionKeyStore sessionKeyStore;
+
+    String generateKDFSalt() {
+        byte[] kdfSalt = new byte[16]; // 128 Bit
+        SecureRandom random = new SecureRandom();
+        random.nextBytes(kdfSalt);
+
+        // Base64-kodiert speichern, wenn nötig
+        return Base64.getEncoder().encodeToString(kdfSalt);
+    }
+
+    SecretKey generateKDF(String masterPassword, String base64kdfSalt) throws NoSuchAlgorithmException, InvalidKeySpecException {
+        char[] passwordChars = masterPassword.toCharArray();
+        byte[] salt = Base64.getDecoder().decode(base64kdfSalt);
+
+        PBEKeySpec spec = new PBEKeySpec(passwordChars, salt, 100_000, 256);
+        SecretKeyFactory skf = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
+        byte[] keyBytes = skf.generateSecret(spec).getEncoded();
+
+        return new SecretKeySpec(keyBytes, "AES");
+    }
+
+    String getPasswordHash(String password) {
+        return BcryptUtil.bcryptHash(password);
+    }
+
 
     @Override
     public long createUser(User user) {
-        if (isMailValid(user.getMasterEmail()) && isPasswordValid(user.getMasterPassword(), user.getMasterEmail())) {
-            String passwordHash = BcryptUtil.bcryptHash(user.getMasterPassword());
+        if (ValidationHelper.isMailValid(user.getMasterEmail()) && ValidationHelper.isPasswordValid(user.getMasterPassword(), user.getMasterEmail())) {
+            String passwordHash = getPasswordHash(user.getMasterPassword());
 
             // 3. User-Objekt erstellen und in DB speichern
+            String kdfSalt = generateKDFSalt();
+            user.setMasterPasswordSalt(kdfSalt);
 
             user.setMasterPasswordHash(passwordHash); // Speichere NUR den Hash
-
             return userRepository.saveUser(user);
         } else {
             throw new DomainValidationException("Invalid email or password");
@@ -48,24 +85,29 @@ public class UserService implements UserUseCase {
     @Override
     public User authenticate(String mail, String password) {
         User user = userRepository.getUser(mail);
-        if (mail.equals(user.getMasterEmail()) && BcryptUtil.matches(password, user.getMasterPasswordHash()))
+        if (mail.equals(user.getMasterEmail()) && BcryptUtil.matches(password, user.getMasterPasswordHash())) {
             return user;
-        return null;
+        }
+        throw new UserDoesNotExistException("Can't find user for given String mail");
     }
 
-
-    boolean isMailValid(String mail) {
-        if (mail == null || mail.isEmpty()) {
-            return false;
-        }
-        return PATTERN.matcher(mail).matches();
+    public String generateJWTandKDF(User user, String password) throws NoSuchAlgorithmException, InvalidKeySpecException {
+        SecretKey kdf = generateKDF(password, user.getMasterPasswordSalt());
+        String sessionId = UUID.randomUUID().toString();
+        String jwtToken = generateJWTtoken(user, sessionId);
+        sessionKeyStore.put(sessionId, kdf);
+        return jwtToken;
     }
 
-    boolean isPasswordValid(String password, String mail) {
-        if (password == null || password.isEmpty() || password.equals(mail)) {
-            return false;
-        }
-        return PASSWORD_PATTERN.matcher(password).matches();
+    private String generateJWTtoken(User user, String sessionId) {
+        //.upn(user.getMasterEmail())
+        return Jwt.issuer("http://org.backwarden.api")
+                //.upn(user.getMasterEmail())
+                .subject(String.valueOf(user.getId()))
+                .claim("sid", sessionId)
+                .groups(Set.of("user"))
+                .expiresIn(Duration.ofHours(2))
+                .sign(JwtKeyGenerator.PRIVATE_KEY);
     }
 }
 
